updated to match changes in the RoutingExtraBundle as well as all other dependencies
warning: composer.lock needs to be updated before merging

see https://github.com/symfony-cmf/RoutingExtraBundle/pull/57 and https://github.com/symfony-cmf/Routing/pull/46

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,8 +90,8 @@ symfony_cmf_routing_extra:
             router.default: 100
     dynamic:
         enabled: true
-        controllers_by_alias:
-            demo_alias: sandbox_main.controller:aliasAction
+        controllers_by_type:
+            demo_type: sandbox_main.controller:typeAction
         controllers_by_class:
             Sandbox\MainBundle\Document\DemoClassContent: sandbox_main.controller:classAction
             Symfony\Cmf\Bundle\RoutingExtraBundle\Document\RedirectRoute:  symfony_cmf_routing_extra.redirect_controller:redirectAction
