--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony-cmf/simple-cms-bundle": "1.0.*",
         "symfony-cmf/search-bundle": "dev-master",
         "symfony-cmf/create-bundle": "dev-master",
+        "symfony-cmf/blog-bundle": "dev-master",
         "jackalope/jackalope-jackrabbit": "1.0.*",
         "doctrine/doctrine-bundle": "1.0.*",
         "doctrine/data-fixtures": "dev-master",
@@ -27,7 +28,9 @@
         "liip/functional-test-bundle": "dev-master",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
         "lunetics/locale-bundle": "dev-master",
-        "symfony-cmf/tree-browser-bundle":"1.0.*"
+        "symfony-cmf/tree-browser-bundle":"1.0.*",
+        "symfony-cmf/blog-bundle": "dev-master",
+        "jackalope/jackalope-doctrine-dbal": "dev-master"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "dev-master",
