added an example of a menu entry that is only available in one locale

--- a/src/Sandbox/MainBundle/Resources/data/page.yml
+++ b/src/Sandbox/MainBundle/Resources/data/page.yml
@@ -153,3 +153,15 @@ static:
             additionalInfoBlock:
                 class: Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
 
+    -
+        name: "singlelocale"
+        title:
+            en: "Single locale"
+            fr: "Single locale"
+        content:
+            en: |
+                <h2>This page is only available in english</h2>
+                <p>The content is actually also translated to french, but there is no route for french.
+            fr: |
+                <h2>This page is only available in english</h2>
+                <p>The content is actually also translated to french, but there is no route for french.
