--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "jms/di-extra-bundle": "1.3.*",
         "symfony-cmf/symfony-cmf": "1.0.*",
         "symfony-cmf/simple-cms-bundle": "1.0.*",
-        "symfony-cmf/search-bundle": "dev-master",
-        "symfony-cmf/create-bundle": "dev-master",
+        "symfony-cmf/search-bundle": "1.0.*",
+        "symfony-cmf/create-bundle": "1.0.*",
         "jackalope/jackalope-jackrabbit": "1.0.*",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "dev-master",
@@ -28,7 +28,7 @@
         "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
         "lunetics/locale-bundle": "dev-master",
         "symfony-cmf/tree-browser-bundle":"1.0.*",
-        "symfony-cmf/blog-bundle": "dev-master",
+        "symfony-cmf/blog-bundle": "1.0.*",
         "sonata-project/cache-bundle": "dev-master",
         "eko/feedbundle": "dev-master"
     },
