--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -184,7 +184,7 @@ sonata_admin:
 sonata_doctrine_phpcr_admin:
     document_tree_defaults: [locale]
     document_tree:
-        Doctrine\PHPCR\Odm\Document\Generic:
+        Doctrine\ODM\PHPCR\Document\Generic:
             valid_children:
                 - all
         Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent:
