--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
         "lunetics/locale-bundle": "dev-master",
         "symfony-cmf/tree-browser-bundle":"1.0.*",
-        "symfony-cmf/blog-bundle": "1.0.*",
+        "symfony-cmf/blog-bundle": "dev-auto_route",
         "sonata-project/cache-bundle": "dev-master",
         "eko/feedbundle": "dev-master"
     },
