--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -228,39 +228,17 @@ sonata_doctrine_phpcr_admin:
 
 fos_js_routing:
     routes_to_expose:
-        - admin_bundle_menu_menunode_create
-        - admin_bundle_menu_menunode_delete
-        - admin_bundle_menu_menunode_edit
-        - admin_bundle_menu_multilangmenunode_create
-        - admin_bundle_menu_multilangmenunode_delete
-        - admin_bundle_menu_multilangmenunode_edit
-        - admin_bundle_content_multilangstaticcontent_create
-        - admin_bundle_content_multilangstaticcontent_delete
-        - admin_bundle_content_multilangstaticcontent_edit
-        - admin_bundle_block_simpleblock_create
-        - admin_bundle_block_simpleblock_delete
-        - admin_bundle_block_simpleblock_edit
-        - admin_bundle_block_containerblock_create
-        - admin_bundle_block_containerblock_delete
-        - admin_bundle_block_containerblock_edit
-        - admin_bundle_block_referenceblock_create
-        - admin_bundle_block_referenceblock_delete
-        - admin_bundle_block_referenceblock_edit
-        - admin_bundle_block_actionblock_create
-        - admin_bundle_block_actionblock_delete
-        - admin_bundle_block_actionblock_edit
-        - admin_bundle_blog_blog_create
-        - admin_bundle_blog_blog_delete
-        - admin_bundle_blog_blog_edit
-        - admin_bundle_blog_post_create
-        - admin_bundle_blog_post_delete
-        - admin_bundle_blog_post_edit
-        - admin_bundle_routingextra_route_create
-        - admin_bundle_routingextra_route_delete
-        - admin_bundle_routingextra_route_edit
-        - admin_bundle_simplecms_page_create
-        - admin_bundle_simplecms_page_delete
-        - admin_bundle_simplecms_page_edit
+        - admin_bundle_menu_menunode_*
+        - admin_bundle_menu_multilangmenunode_*
+        - admin_bundle_content_multilangstaticcontent_*
+        - admin_bundle_block_simpleblock_*
+        - admin_bundle_block_containerblock_*
+        - admin_bundle_block_referenceblock_*
+        - admin_bundle_block_actionblock_*
+        - admin_bundle_blog_blog_*
+        - admin_bundle_blog_post_*
+        - symfony_cmf_routing_extra_route_admin_*
+        - admin_bundle_simplecms_page_*
         - symfony_cmf_tree_browser.phpcr_children
         - symfony_cmf_tree_browser.phpcr_move
         - sonata.admin.doctrine_phpcr.phpcrodm_children
