--- a/composer.json
+++ b/composer.json
@@ -17,24 +17,24 @@
         "sensio/generator-bundle": "2.2.*",
         "jms/security-extra-bundle": "1.4.*",
         "jms/di-extra-bundle": "1.3.*",
-        "symfony-cmf/symfony-cmf": "1.0.*",
-        "symfony-cmf/simple-cms-bundle": "1.0.*",
-        "symfony-cmf/search-bundle": "1.0.*",
-        "symfony-cmf/create-bundle": "1.0.*",
-        "jackalope/jackalope-jackrabbit": "1.0.*",
+        "symfony-cmf/symfony-cmf": "1.0.0-alpha1",
+        "symfony-cmf/simple-cms-bundle": "1.0.0-alpha2",
+        "symfony-cmf/search-bundle": "1.0.0-alpha1",
+        "symfony-cmf/create-bundle": "1.0.0-alpha1",
+        "jackalope/jackalope-jackrabbit": "1.0.0-beta1",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
         "doctrine/doctrine-fixtures-bundle": "2.1.*",
         "liip/functional-test-bundle": "1.0.*",
-        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
-        "lunetics/locale-bundle": "dev-master",
-        "symfony-cmf/tree-browser-bundle":"1.0.*",
-        "symfony-cmf/blog-bundle": "1.0.*",
+        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.0-alpha2",
+        "lunetics/locale-bundle": "2.2.*",
+        "symfony-cmf/routing-auto-bundle": "1.0.0-alpha1",
+        "symfony-cmf/blog-bundle": "1.0.0-alpha1",
         "sonata-project/cache-bundle": "2.1.*",
         "eko/feedbundle": "1.0.*"
     },
     "suggest": {
-        "jackalope/jackalope-doctrine-dbal": "dev-master",
+        "jackalope/jackalope-doctrine-dbal": "1.0.0-alpha1",
         "midgard/phpcr": "dev-master"
     },
     "scripts": {
