--- a/src/Sandbox/MainBundle/Resources/config/services.yml
+++ b/src/Sandbox/MainBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     sandbox_main.controller:
         class: Sandbox\MainBundle\Controller\ContentController
-        parent: symfony_cmf_content.controller
+        parent: cmf_content.controller
 
     sandbox_main.debugListener:
         class: Sandbox\MainBundle\EventListener\SandboxExceptionListener
