--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ framework:
     templating:      { engines: ['twig'] } #assets_version: SomeVersionScheme
     default_locale:  %locale%
     session:         ~
+    trusted_proxies: ~
 
 # Twig Configuration
 twig:
