Confiured PWF admin extension

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -145,6 +145,11 @@ sonata_block:
             cache: cmf.block.cache.js_async
 
 sonata_admin:
+    extensions:
+        cmf_core.admin_extension.publish_workflow:
+            implements:
+                - Symfony\Cmf\Bundle\CoreBundle\PublishWorkflow\PublishWorkflowInterface
+
     templates:
         # default global templates
         ajax:    SonataAdminBundle::ajax_layout.html.twig
