add config for slideshowblock

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,6 +21,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    form:
+        resources:
+            - 'CmfMediaBundle:Form:fields.html.twig'
 
 # Assetic Configuration
 assetic:
@@ -136,6 +139,11 @@ cmf_menu:
 cmf_blog:
     blog_basepath: /cms/content
 
+cmf_block:
+    imagine: true
+
+cmf_media:
+    imagine_filter: image_upload_thumbnail
 
 sonata_block:
     default_contexts: [cms]
@@ -174,6 +182,8 @@ sonata_admin:
                     - cmf_block.container_admin
                     - cmf_block.reference_admin
                     - cmf_block.action_admin
+                    - cmf_block.imagine.multilang_slideshow_admin
+                    - cmf_block.imagine.multilang_imagine_admin
                     - sandbox_banner.admin.image_block                    
             routing:
                 label: page routes
@@ -219,12 +229,26 @@ sonata_doctrine_phpcr_admin:
             valid_children: []
         Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock:
             valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Document\SlideshowBlock:
+            valid_children:
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ImagineBlock
+        Symfony\Cmf\Bundle\BlockBundle\Document\MultilangSlideshowBlock:
+            valid_children:
+                - Symfony\Cmf\Bundle\BlockBundle\Document\MultilangImagineBlock
+        Symfony\Cmf\Bundle\BlockBundle\Document\ImagineBlock:
+            valid_children: []
+        Symfony\Cmf\Bundle\BlockBundle\Document\MultilangImagineBlock:
+            valid_children: []
         Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock:
             valid_children:
                 - Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ReferenceBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\SlideshowBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\MultilangSlideshowBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\ImagineBlock
+                - Symfony\Cmf\Bundle\BlockBundle\Document\MultilangImagineBlock
                 - Sandbox\BannerBundle\Document\ImageBlock
         Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page: ~
         Symfony\Cmf\Bundle\RoutingBundle\Document\Route:
@@ -401,3 +425,15 @@ liip_imagine:
             controller_action: 'SonataMediaBundle:Media:liipImagineFilter'
             filters:
                 thumbnail: { size: [500, 200], mode: outbound }
+
+        # define the filter to be used with the image preview
+        image_upload_thumbnail:
+            data_loader: cmf_media_doctrine_phpcr
+            filters:
+                thumbnail: { size: [100, 100], mode: outbound }
+
+        cmf_block:
+            data_loader: cmf_media_doctrine_phpcr
+            quality: 85
+            filters:
+                thumbnail: { size: [50, 50], mode: outbound }
